Wrap client side routes in Switch component.  This will only render the first matching child route.  Order is important, similar to express' routing.  Add 404 page so that urls with no matching routes no longer render a blank page

--- a/client/src/styles/default-styles.scss
+++ b/client/src/styles/default-styles.scss
@@ -15,3 +15,7 @@ $default-auth-button-color:#0392cf;
     background:lighten($default-auth-button-color, 8%)
   }
 }
+
+.default-shadowed-heading{
+
+}
